--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 layout: page
 title: Directory
 ---
+<p>
+  <a href="https://openwork.nz/" title="Our website">OpenWork</a> |
+  <a href="https://geodata.nz/" title="Hosted by us via Catalyst Cloud">Public GeoNetwork</a> |
+  <a href="https://odysseus.adrian.geek.nz/" title="Developed by Adrian Cochrane of OpenWork">Odysseus web browser</a>
+</p>
 
 <ul>{% for resource in posts|sort:"title" %}
   <li><a href="{{ resource.url | relative_url }}">{{ resource.title }}</a></li>
