--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ title: Directory
 <p>
   <a href="https://openwork.nz/" title="Our website">OpenWork</a> |
   <a href="https://geodata.nz/" title="Hosted by us via Catalyst Cloud">Public GeoNetwork</a> |
-  <a href="https://odysseus.adrian.geek.nz/" title="Developed by Adrian Cochrane of OpenWork">Odysseus web browser</a>
+  <a href="https://odysseus.adrian.geek.nz/" title="Developed by Adrian Cochrane of OpenWork">Odysseus web browser</a> |
+  <a href="https://git.nzoss.org.nz/openwork/libdggs" title="lightweight geospatial analysis">libdggs</a>
 </p>
 
 <ul>{% for resource in posts|sort:"title" %}
