Add code repository links.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ title: Directory
   <a href="https://odysseus.adrian.geek.nz/" title="Developed by Adrian Cochrane of OpenWork">Odysseus web browser</a> |
   <a href="https://git.nzoss.org.nz/openwork/libdggs" title="lightweight geospatial analysis">libdggs</a>
 </p>
+<p>Code reposositories: <a href="https://git.nzoss.org.nz/openwork/">NZ OSS</a> | <a href="https://github.com/OpenWork-NZ">GitHub</a></p>
 
 <ul>{% for resource in posts|sort:"title" %}
   <li><a href="{{ resource.url | relative_url }}">{{ resource.title }}</a></li>
