Decided on a better label for geodata.nz

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Directory
 ---
 <p>
   <a href="https://openwork.nz/" title="Our website">OpenWork</a> |
-  <a href="https://geodata.nz/" title="Hosted by us via Catalyst Cloud">Public GeoNetwork</a> |
+  <a href="https://geodata.nz/" title="GeoNetwork hosted by us via Catalyst Cloud">GeoData.NZ catalogue</a> |
   <a href="https://odysseus.adrian.geek.nz/" title="Developed by Adrian Cochrane of OpenWork">Odysseus web browser</a> |
   <a href="https://git.nzoss.org.nz/openwork/libdggs" title="lightweight geospatial analysis">libdggs</a>
 </p>
