--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: page
 title: Directory
 ---
+<style>body {text-align: center;}</style>
+
 <p>
   <a href="https://openwork.nz/" title="Our website">OpenWork</a> |
   <a href="https://geodata.nz/" title="GeoNetwork hosted by us via Catalyst Cloud">GeoData.NZ catalogue</a> |
