Add descriptions for our projects.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@ title: Directory
 <style>body {text-align: center;}</style>
 
 <p>
-  <a href="https://openwork.nz/" title="Our website">OpenWork</a> |
-  <a href="https://geodata.nz/" title="GeoNetwork hosted by us via Catalyst Cloud">GeoData.NZ catalogue</a> |
-  <a href="https://odysseus.adrian.geek.nz/" title="Developed by Adrian Cochrane of OpenWork">Odysseus web browser</a> |
-  <a href="https://git.nzoss.org.nz/openwork/libdggs" title="lightweight geospatial analysis">libdggs</a>
+  <a href="https://openwork.nz/" title="Our website">OpenWork</a>
 </p>
+<h2>OWL Projects</h2>
+<dl>
+  <dt><a href="https://geodata.nz/">GeoData.NZ catalogue</a></dt>
+  <dd>GeoNetwork instance hosted by us via Catalyst Cloud.</dd>
+  <dt><a href="https://odysseus.adrian.geek.nz/">Odysseus web browser</a></dt>
+  <dd>Developed by Adrian Cochrane of OpenWork Ltd for elementary OS and to help people rely less on centralized webservices.</dd>
+  <dt><a href="https://git.nzoss.org.nz/openwork/libdggs" title="lightweight geospatial analysis">libdggs</a></dt>
+  <dd>Lightweight geospatial analysis using the Discrete Global Grid Systems standards.</dd>
+</dl>
 <p>Code reposositories: <a href="https://git.nzoss.org.nz/openwork/">NZ OSS</a> | <a href="https://github.com/OpenWork-NZ">GitHub</a></p>
 
 <ul>{% for resource in site.posts|sort:"title" %}
