--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Directory
 ---
 
-<p>
+<p style="margin: 5px; padding: 0;">
   <a href="https://openwork.nz/">OpenWork Ltd website</a>
 </p>
 
