--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ title: Directory
 
 <h2>OWL Projects</h2>
 <dl>
-  <dt><a href="https://geodata.nz/">GeoData.NZ catalogue</a></dt>
-  <dd>GeoNetwork instance hosted by us via Catalyst Cloud.</dd>
+  <dt><a href="https://geodata.nz/">Geodata.nz catalogue</a></dt>
+  <dd>Geospatial data catalogue which harvests from multiple catalogues like the old Geodata.gov. Serves as a testbed for catalogue and metadata improvements.</dd>
   <dt><a href="https://odysseus.adrian.geek.nz/">Odysseus web browser</a></dt>
   <dd>Developed by Adrian Cochrane of OpenWork Ltd for elementary OS and to help people rely less on centralized webservices.</dd>
   <dt><a href="https://git.nzoss.org.nz/openwork/libdggs" title="lightweight geospatial analysis">libdggs</a></dt>
