--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@ title: Directory
   <dd>Because most software developers have an account there.</dd>
 </dl>
 
+<h2>ISO/TC 211</h2>
+<dl>
+  <dt><a href="https://committee.iso.org/home/tc211">Homepage</a></dt>
+  <dd>International standardization in the field of digital geographic information.</dd>
+  <dt><a href="https://committee.iso.org/sites/tc211/home/re.html">Resources</a></dt>
+  <dd>Contains links to resources for accessing and using models and schemas from the ISO/TC211 Standards.</dd>
+  <dt><a href="https://committee.iso.org/files/live/users/fh/aj/aj/tc211contributor%40iso.org/files/Resources/TC211_%20Multi-Lingual_Glossary%20-%2020181105_Published.xls">Glossary</a></dt>
+  <dd>The ISO/TC 211 Multi-Lingual Glossary of Terms has been compiled from International Standards developed by ISO/TC 211.</dd>
+  <dt><a href="http://wiki.icaci.org/index.php?title=Standards">Wiki</a></dt>
+  <dd>Provides background information on geospatial standardization: a standard and different types of standards are defined; the development and implementation of standards are described; and key standards bodies for fundamental geospatial datasets are introduced.</dd>
+  <dt><a href="https://registry.isotc211.org/">Geodetic registry</a></dt>
+  <dd>Structured database of coordinate reference systems and transformations that is accessible through this on-line registry system.</dd>
+</dl>
+
 <h2>Documentation</h2>
 <dl>{% for resource in site.posts|sort:"title" %}
   <dt><a href="{{ resource.url | relative_url }}">{{ resource.title }}</a></dt>
