Note that ISO's glossary is an excell file.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ title: Directory
   <dd>International standardization in the field of digital geographic information.</dd>
   <dt><a href="https://committee.iso.org/sites/tc211/home/re.html">Resources</a></dt>
   <dd>Contains links to resources for accessing and using models and schemas from the ISO/TC211 Standards.</dd>
-  <dt><a href="https://committee.iso.org/files/live/users/fh/aj/aj/tc211contributor%40iso.org/files/Resources/TC211_%20Multi-Lingual_Glossary%20-%2020181105_Published.xls">Glossary</a></dt>
+  <dt><a href="https://committee.iso.org/files/live/users/fh/aj/aj/tc211contributor%40iso.org/files/Resources/TC211_%20Multi-Lingual_Glossary%20-%2020181105_Published.xls">Glossary</a> (.xls)</dt>
   <dd>The ISO/TC 211 Multi-Lingual Glossary of Terms has been compiled from International Standards developed by ISO/TC 211.</dd>
   <dt><a href="http://wiki.icaci.org/index.php?title=Standards">Wiki</a></dt>
   <dd>Provides background information on geospatial standardization: a standard and different types of standards are defined; the development and implementation of standards are described; and key standards bodies for fundamental geospatial datasets are introduced.</dd>
