Add semi-related links.

--- a/index.html
+++ b/index.html
@@ -44,3 +44,13 @@ title: Directory
   <dt><a href="{{ resource.url | relative_url }}">{{ resource.title }}</a></dt>
   {% if resource.description %}<dd>{{ resource.description }}</dd>{% endif %}
 {% endfor %}</dl>
+
+<h2>More cool stuff!</h2>
+<dl>
+  <dt><a href="https://cleverelephant.ca/">Paul Ramsey's</a> blog &amp; talks</dt>
+  <dd>Excellent writing and presentations on GIS, open source software, and business models from a founder of the PostGIS spatial database.</dd>
+  <dt><a href="https://www.inkandswitch.com/local-first.html">Local-first software</a></dt>
+  <dd>Explores ideals for professional and creative software that have the ability to work offline and collaborate across multiple devices, while also improving the security, privacy, long-term preservation, and user control of data.</dd>
+  <dt><a href="https://solar.lowtechmagazine.com/">Low Tech Magazine</a></dt>
+  <dd>An off-the-grid solar-powered blog that explores issues around energy efficiency.</dd>
+</dl>
