--- a/index.html
+++ b/index.html
@@ -52,5 +52,5 @@ title: Directory
   <dt><a href="https://www.inkandswitch.com/local-first.html">Local-first software</a></dt>
   <dd>Explores ideals for professional and creative software that have the ability to work offline and collaborate across multiple devices, while also improving the security, privacy, long-term preservation, and user control of data.</dd>
   <dt><a href="https://solar.lowtechmagazine.com/">Low Tech Magazine</a></dt>
-  <dd>An off-the-grid solar-powered blog that explores issues around energy efficiency.</dd>
+  <dd>An off-the-grid solar-powered blog that explores issues around energy efficiency and environmental sustainability.</dd>
 </dl>
