Update glossary and Adrian's browser links.
Added link to Rhapsode.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ title: Directory
   <dt><a href="https://geodata.nz/">Geodata.nz catalogue</a></dt>
   <dd>Geospatial data catalogue which harvests from multiple catalogues like the old Geodata.gov. Serves as a testbed for catalogue and metadata improvements.</dd>
   <dt><a href="https://odysseus.adrian.geek.nz/">Odysseus web browser</a></dt>
-  <dd>Developed by Adrian Cochrane of OpenWork Ltd for elementary OS and to help people rely less on centralized webservices.</dd>
+  <dd>Developed by Adrian Cochrane of OpenWork for elementary OS and to help people rely less on centralized webservices for (re)discovering webpages.</dd>
+  <dt><a href="https://git.nzoss.org.nz/alcinnz/rhapsode/">Rhapsode web browser/voice assistant</a></dt>
+  <dd>Developed by Adrian Cochrane of OpenWork to show how The Web can target new mediums.</dd>
   <dt><a href="https://git.nzoss.org.nz/openwork/libdggs" title="lightweight geospatial analysis">libdggs</a></dt>
   <dd>Lightweight geospatial analysis using the Discrete Global Grid Systems standards.</dd>
 </dl>
@@ -31,7 +33,7 @@ title: Directory
   <dd>International standardization in the field of digital geographic information.</dd>
   <dt><a href="https://committee.iso.org/sites/tc211/home/re.html">Resources</a></dt>
   <dd>Contains links to resources for accessing and using models and schemas from the ISO/TC211 Standards.</dd>
-  <dt><a href="https://committee.iso.org/files/live/users/fh/aj/aj/tc211contributor%40iso.org/files/Resources/TC211_%20Multi-Lingual_Glossary%20-%2020181105_Published.xls">Glossary</a> (.xls)</dt>
+  <dt><a href="https://www.geolexica.org/">Glossary</a></dt>
   <dd>The ISO/TC 211 Multi-Lingual Glossary of Terms has been compiled from International Standards developed by ISO/TC 211.</dd>
   <dt><a href="http://wiki.icaci.org/index.php?title=Standards">Wiki</a></dt>
   <dd>Provides background information on geospatial standardization: a standard and different types of standards are defined; the development and implementation of standards are described; and key standards bodies for fundamental geospatial datasets are introduced.</dd>
